# SDL_Tutorials

./: README.md
Lesson01_HelloSDL2/: CMakeLists.txt
Lesson01_HelloSDL2/inc/: Game.h
Lesson01_HelloSDL2/src/: Game.cpp  main.cpp
Lesson02_Texture/: CMakeLists.txt
Lesson02_Texture/inc/: Game.h  TextureManager.h
Lesson02_Texture/src/: Game.cpp  TextureManager.cpp  main.cpp
redbluewar/inc/: Game.h
redbluewar/src/: Game.cpp
redbluewar2/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Math.h  Player.h  RBWar.cpp  RBWar.h  Vector2.cpp  Vector2.h  main.cpp
